--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.27.1",
     "styled-components": "^5.1.1"
   },
   "scripts": {
